# knotepad

./: CMakeLists.txt  knotepad.desktop
src/: documenttab.cpp  documenttab.h  knotepadui.rc  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  rtfhandler.cpp  rtfhandler.h  sessionmanager.cpp  sessionmanager.h
